# vrl

./: .editorconfig  .gitignore  .release-plz.toml  .typos.toml  AI_POLICY.md  BENCH_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  DESIGN.md  LICENSE-3rdparty.csv  Makefile  README.md  REFACTOR.md  ast.rs  build.rs  changelog.toml  clippy.toml  deny.toml  license-tool.toml  objectmap-optimization-proposal.md  parse_grok.rs  parse_grok_pattern.rs  rust-toolchain.toml  static-analysis.datadog.yml  update_parameter_defaults_lazylock.py  update_parameter_descriptions.py  wrap_parameters_lazylock.py
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
benches/: keystring.rs  keyvalue.rs  kind.rs  objectmap.rs  objectmap_cliff.rs  objectmap_hybrid.rs  runtime.rs  stdlib.rs
changelog.d/: 0000.feature.md  1001.enhancement.md  1003.fix.md  (+164 more)
lib/cli/: Cargo.toml
lib/cli/src/: cmd.rs  lib.rs  main.rs  repl.rs
lib/lookup/: Cargo.toml
lib/lookup/src/: field.rs  lib.rs
lib/lookup/src/lookup_buf/: mod.rs  segmentbuf.rs
lib/lookup/src/lookup_v2/: compat.rs  mod.rs  owned.rs
lib/lookup/src/lookup_view/: mod.rs  segment.rs
lib/tests/: Cargo.toml
lib/tests/src/: lib.rs  main.rs  test.rs
lib/tests/tests/diagnostics/: abort_with_non_string_message.vrl  cannot_mutate_field_for_non_object_type.vrl  cant_abort_infallible_function.vrl  deprecation_to_timestamp.vrl  function_static_expression_needed.vrl  invalid_escape_char.vrl  invalid_raw_string.vrl  invalid_string.vrl  return_in_closure.vrl  return_in_closure_after_closure.vrl  return_in_closure_argument.vrl  syntax_error_path_segment.vrl  truncate_deprecated_argument.vrl  unhandled_parse_regex_all_type.vrl  unterminated_literal.vrl
lib/tests/tests/diagnostics/deprecations/: to_timestamp.vrl
lib/tests/tests/diagnostics/unusued/: top_level.vrl
lib/tests/tests/examples/: blog_vector_remap_language_error_diagnostic.vrl  parse_nginx_access_log.vrl
lib/tests/tests/expressions/abort/: abort_typedef.vrl
lib/tests/tests/expressions/arithmetic/addition/: invalid.vrl  overflow.vrl
lib/tests/tests/expressions/arithmetic/bitwise_and/: integer.vrl
lib/tests/tests/expressions/arithmetic/bitwise_or/: integer.vrl
lib/tests/tests/expressions/arithmetic/division/: invalid.vrl
lib/tests/tests/expressions/arithmetic/merge/: invalid.vrl
lib/tests/tests/expressions/arithmetic/multiplication/: invalid.vrl  overflow.vrl
lib/tests/tests/expressions/arithmetic/remainder/: overflow.vrl
lib/tests/tests/expressions/arithmetic/subtraction/: invalid.vrl  nan_result.vrl  overflow.vrl
lib/tests/tests/expressions/assignment/: infallible_assignment_typedef.vrl  infallible_mixed.vrl  infallible_mixed_path.vrl  infallible_ok_return_value.vrl
lib/tests/tests/expressions/block/: abort_check.vrl  fallibility_check.vrl  multiple_expressions_multi_line.vrl  multiple_expressions_single_line.vrl
lib/tests/tests/expressions/comparison/: ge.vrl  gt.vrl  le.vrl  lt.vrl
lib/tests/tests/expressions/function_call/: closure_scope.vrl  closure_scope_inheritance.vrl
lib/tests/tests/expressions/if_statement/: conditional_assignment.vrl  else_braced_if_predicate_local_escape.vrl  else_if_body_local_escape.vrl  else_if_body_local_in_later_predicate.vrl  else_if_predicate_local_escape.vrl  else_if_predicate_locals.vrl  else_if_third_pred_local_escape.vrl  else_multistmt_predicate_local_escape.vrl  else_on_newline.vrl  if_predicate_local_escape.vrl
lib/tests/tests/expressions/literal/: array.vrl  array_undefined_upgrade copy.vrl  decimal.vrl  object.vrl  object_undefined_upgrade.vrl
lib/tests/tests/expressions/query/: ampersat.vrl  container_side_effect.vrl  function_side_effect.vrl
lib/tests/tests/expressions/return/: expressions_after_return.vrl  return.vrl  return_bad_type_in_closure.vrl  return_custom.vrl  return_in_closure.vrl  return_in_closure_after_closure.vrl  return_in_closure_argument.vrl  return_in_closure_in_closure.vrl  return_true.vrl  return_typedef.vrl
lib/tests/tests/expressions/short_circuit/: and.vrl  or.vrl
lib/tests/tests/expressions/templates/: decimal_interpolation.vrl
lib/tests/tests/expressions/unary/: bitwise_not.vrl
lib/tests/tests/functions/: encode_csv.vrl  match_datadog_query.vrl  match_datadog_query_invalid_argument.vrl  parse_bytes.vrl  parse_groks.vrl  parse_groks_alias_source.json  parse_regex_all.vrl  pop.vrl  slice_typedef.vrl  uuid_v7.vrl  uuid_v7_invalid_parameter_type.vrl  uuid_v7_valid_with_explicit_now.vrl  uuid_v7_valid_with_timestamp.vrl  zstd.vrl
lib/tests/tests/functions/del/: external_del_type_def.vrl
lib/tests/tests/functions/flatten/: except.vrl  from_unflatten.vrl  simple.vrl
lib/tests/tests/functions/parse_etld/: custom_psl_file.vrl  custom_psl_file_does_not_exist.vrl  custom_psl_file_wrong_format.vrl  etld_from_url.vrl  etld_plus_one.vrl  etld_plus_ten.vrl  just_etld.vrl
lib/tests/tests/functions/punycode/: decode.vrl  encode.vrl  encode_decode.vrl  url_encode_decode.vrl
lib/tests/tests/functions/replace_with/: capture_groups.vrl  captures_capture_group_name.vrl  error_in_closure.vrl  neg_count.vrl  string_capture_group_name.vrl  wrong_type.vrl  zero_count.vrl
lib/tests/tests/functions/shannon_entropy/: codepoints.vrl  default.vrl  utf8.vrl  utf8_emojis.vrl
lib/tests/tests/functions/sieve/: all_options.vrl  characters.vrl  regex.vrl
lib/tests/tests/functions/unflatten/: from_flatten.vrl  simple.vrl
lib/tests/tests/internal/: allow_reserved_keywords.vrl  assignment_rhs.vrl  infallible_ok_maybe_null.vrl  query_ignore_parens_in_quotes.vrl  reserved_identifiers.vrl  short_circuit.vrl  type_def_merging.vrl  unknown_typedef_undefined.vrl
lib/tests/tests/issues/: 11287_http_pipelines_blackhole.vrl  453_fallible_taint_next_assignment.vrl  6571_invalid_escape.vrl
lib/tests/tests/rfcs/8381/: convert_object_to_specific_string_format.vrl
release/: Cargo.toml  README.md  create_release_pull_request.py  publish.py  requirements.txt
release/src/: changelog.rs  crates_io.rs  main.rs  version.rs
release/utils/: validate_version.py
(+905 files in other folders)
