[package]
name = "vrl"
version = "0.31.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2024"
license = "MPL-2.0"
description = "Vector Remap Language"
homepage = "https://vrl.dev/"
repository = "https://github.com/vectordotdev/vrl"
readme = "README.md"
keywords = ["vector", "datadog", "compiler"]
categories = ["compilers"]
rust-version = "1.88" # msrv

[workspace]
members = [
  ".",
  "lib/tests",
  "lib/fuzz",
  "lib/docs",
]
default-members = ["."]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }

[features]
default = ["compiler", "value", "diagnostic", "path", "parser", "stdlib", "datadog", "core", "cli", "enable_env_functions", "enable_system_functions", "enable_network_functions", "enable_crypto_functions"]

# Contains the core functionality of VRL. Compiling and running VRL programs.
compiler = ["diagnostic", "path", "parser", "value", "dep:chrono", "dep:serde", "dep:regex", "dep:bytes", "dep:ordered-float", "dep:chrono-tz", "dep:snafu", "dep:thiserror", "dep:dyn-clone", "dep:indoc", "dep:lalrpop-util", "dep:rust_decimal"]

# Contains the primary data type used in VRL.
value = ["path", "dep:bytes", "dep:regex", "dep:ordered-float", "dep:chrono", "dep:serde_json", "dep:simdutf8", "dep:rust_decimal"]

# Logic related to errors and displaying info about them.
# Main features (on by default)
diagnostic = ["dep:codespan-reporting", "dep:termcolor"]

# Contains the parser, datatypes, and functions related to VRL paths.
path = ["value", "dep:serde", "dep:snafu", "dep:regex"]

# Creates an abstract syntax tree (AST) from VRL source code.
parser = ["path", "diagnostic", "value", "dep:thiserror", "dep:ordered-float", "dep:lalrpop-util"]

# Text parsing primitives used by stdlib functions that handle structured formats (JSON, XML, URLs, etc.).
parsing = ["value", "compiler", "dep:url", "dep:nom", "dep:regex", "dep:roxmltree", "dep:rust_decimal"]

# Various data structures and utility methods (these may be renamed / moved in the future).
core = ["value", "dep:snafu", "dep:nom"]

string_path = []

# Enables all Datadog-specific features (filter, grok, search).
datadog = ["datadog_filter", "datadog_grok", "datadog_search"]

# Implements the Datadog log search query filter syntax.
datadog_filter = ["path", "datadog_search", "dep:regex", "dep:dyn-clone"]

# Implements the Datadog grok parser (used with `parse_grok` and `parse_groks` in the stdlib). Not supported on wasm32.
datadog_grok = ["value", "parsing", "dep:nom", "dep:peeking_take_while", "dep:serde_json", "dep:onig", "dep:lalrpop-util", "dep:thiserror", "dep:chrono", "dep:chrono-tz", "dep:percent-encoding", "dep:fancy-regex"]

# Implements the Datadog log search syntax.
datadog_search = ["dep:pest", "dep:pest_derive", "dep:itertools", "dep:regex", "dep:serde"]

# Contains functionality to create a CLI for VRL.
cli = ["compiler", "dep:clap", "dep:serde_json", "dep:thiserror", "dep:exitcode", "dep:webbrowser", "dep:rustyline", "dep:prettytable-rs"]

# Contains the test framework for testing VRL functions. Useful for testing custom functions.
test_framework = ["compiler", "dep:prettydiff", "dep:serde_json", "dep:nu-ansi-term"]

# Implements `Arbitrary` (from the `quickcheck` crate) for the `Value` type.
arbitrary = ["dep:quickcheck", "dep:arbitrary"]

# Activates fixture-stable Arbitrary implementations for use with the native
# encoding fixture generator in the vector-core crate.
generate-fixtures = ["arbitrary"]

# Makes the `Value` type compatible with the `mlua` crate.
lua = ["dep:mlua"]

# Property-based testing support via proptest.
proptest = ["dep:proptest", "dep:proptest-derive"]

# Preserves float precision during JSON serialization/deserialization.
float_roundtrip = ["dep:serde_json", "serde_json/float_roundtrip"]

# Enables environment variable access functions (e.g. `get_env_var`).
enable_env_functions = []

# Enables system-level functions (e.g. `get_hostname`).
enable_system_functions = ["dep:relative-path"]

# Enables network I/O functions (e.g. `http_request`, `dns_lookup`, `reverse_dns`). Not supported on wasm32.
enable_network_functions = ["dep:reqwest", "dep:reqwest-middleware", "dep:reqwest-retry"]

# Enables cryptographic functions: hashing (MD5, SHA, xxHash, etc.), encryption (AES, ChaCha20, etc.), and MACs.
enable_crypto_functions = [
  "dep:aes",
  "dep:aes-siv",
  "dep:cbc",
  "dep:cfb-mode",
  "dep:chacha20poly1305",
  "dep:crypto_secretbox",
  "dep:ctr",
  "dep:digest",
  "dep:hex",
  "dep:hmac",
  "dep:ipcrypt-rs",
  "dep:md-5",
  "dep:ofb",
  "dep:seahash",
  "dep:sha-1",
  "dep:sha-2",
  "dep:sha-3",
  "dep:xxhash-rust",
  "dep:crc",
]

# Testing Utilities. Enables additional tests, including those with external dependencies such as network calls.
test = ["string_path"]

# Documentation generation support.
docs = ["stdlib", "indexmap/serde", "serde_json/preserve_order", "dep:clap", "dep:thiserror", "dep:exitcode"]

# All stdlib functions (base + all enable_* features)
stdlib = [
  "stdlib-base",
  "enable_crypto_functions",
  "enable_env_functions",
  "enable_system_functions",
  "enable_network_functions"
]

# Base stdlib functionality (without enable_* features)
stdlib-base = [
  "compiler",
  "core",
  "datadog",
  "parsing",
  "dep:base16",
  "dep:base62",
  "dep:base64-simd",
  "dep:charset",
  "dep:convert_case",
  "dep:ciborium",
  "dep:cidr",
  "dep:community-id",
  "dep:csv",
  "dep:domain",
  "dep:dns-lookup",
  "dep:flate2",
  "dep:grok",
  "dep:hostname",
  "dep:iana-time-zone",
  "dep:idna",
  "dep:indexmap",
  "dep:influxdb-line-protocol",
  "dep:nom",
  "dep:parse-size",
  "dep:percent-encoding",
  "dep:prost",
  "dep:prost-reflect",
  "dep:psl",
  "dep:psl-types",
  "dep:publicsuffix",
  "dep:quoted_printable",
  "dep:rand",
  "dep:roxmltree",
  "dep:rust_decimal",
  "dep:snap",
  "dep:strip-ansi-escapes",
  "dep:strum",
  "dep:strum_macros",
  "dep:syslog_loose",
  "dep:tokio",
  "dep:ua-parser",
  "dep:url",
  "dep:utf8-width",
  "dep:uuid",
  "dep:woothee",
  "dep:zstd",
  "dep:encoding_rs"
]

[dependencies]
cfg-if = "1"

# Optional dependencies
nu-ansi-term = { version = "0.50", optional = true }
arbitrary = { version = "1", optional = true, features = ["derive"] }
base16 = { version = "0.2", optional = true }
base62 = { version = "2.2.1", optional = true }
base64-simd = { version = "0.8", optional = true }
bytes = { version = "1", default-features = false, optional = true }
charset = { version = "0.1", optional = true }
encoding_rs = { version = "0.8.35", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "wasmbind"], optional = true }
chrono-tz = { version = "0.10", default-features = false, optional = true }
ciborium = { version = "0.2.2", default-features = false, optional = true }
cidr = { version = "0.3", optional = true }
csv = { version = "1", optional = true }
clap = { workspace = true, optional = true }
codespan-reporting = { version = "0.12", optional = true }
convert_case = { version = "0.7.1", optional = true }
crc = { version = "3.3.0", optional = true }
digest = { version = "0.10", optional = true }
dyn-clone = { version = "1", default-features = false, optional = true }
exitcode = { version = "1", optional = true }
flate2 = { version = "1.1.2", default-features = false, features = ["zlib-rs"], optional = true }
hex = { version = "0.4", optional = true }
hmac = { version = "0.12", optional = true }
iana-time-zone = { version = "0.1", optional = true }
idna = { version = "1.0", optional = true }
indexmap = { version = "2", default-features = false, features = ["std"], optional = true }
influxdb-line-protocol = { version = "2.0.0", optional = true }
indoc = { version = "2", optional = true }
itertools = { version = "0.14", default-features = false, features = ["use_std"], optional = true }
lalrpop-util = { version = "0.22", optional = true }
mlua = { version = "0.10", default-features = false, features = ["lua54", "send", "vendored"], optional = true }
nom = { version = "8", default-features = false, features = ["std"], optional = true }
ordered-float = { version = "4", default-features = false, optional = true }
md-5 = { version = "0.10", optional = true }
parse-size = { version = "1.1.0",  optional = true }
peeking_take_while = { version = "1", default-features = false, optional = true }
percent-encoding = { version = "2", optional = true }
pest = { version = "2", default-features = false, optional = true, features = ["std"] }
pest_derive = { version = "2", default-features = false, optional = true, features = ["std"] }
proptest = { version = "1", optional = true }
proptest-derive = { version = "0.6", optional = true }
prettydiff = { version = "0.8", default-features = false, optional = true }
prettytable-rs = { version = "0.10", default-features = false, optional = true }
quickcheck = { version = "1", optional = true }
quoted_printable = { version = "0.5", optional = true }
psl = { version = "2", optional = true }
psl-types = { version = "2", optional = true }
publicsuffix = { version = "2", optional = true }
rand = { version = "0.9.3", optional = true }
regex = { version = "1", default-features = false, optional = true, features = ["std", "perf", "unicode"] }
relative-path = { version = "2.0.1", optional = true }
roxmltree = { version = "0.21", optional = true }
rustyline = { version = "17", default-features = false, optional = true }
rust_decimal = { version = "1", optional = true, default-features = false, features = ["macros"] }
seahash = { version = "4", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", default-features = false, optional = true, features = ["std", "raw_value"] }
serde_yaml_ng = { version = "0.10.0" }
simdutf8 = { version = "0.1.5", optional = true }
fancy-regex = { version = "0.17", default-features = false, optional = true }
sha-1 = { version = "0.10", optional = true }
sha-2 = { package = "sha2", version = "0.10", optional = true }
sha-3 = { package = "sha3", version = "0.10", optional = true }
strip-ansi-escapes = { version = "0.2", optional = true }
snap = { version = "1", optional = true }
syslog_loose = { version = "0.22", optional = true }
termcolor = { version = "1", optional = true }
thiserror = { version = "2", optional = true }
tracing = { version = "0.1", default-features = false }
ua-parser = { version = "0.2", optional = true }
utf8-width = { version = "0.1", optional = true }
url = { version = "2", optional = true }
snafu = { version = "0.8", optional = true }
strum = { version = "0.26", optional = true }
strum_macros = { version = "0.26", optional = true }
webbrowser = { version = "1.0", default-features = false, optional = true }
woothee = { version = "0.13", optional = true }
xxhash-rust = { version = "0.8", optional = true, features = [
  "xxh3",
  "xxh32",
  "xxh64",
] }
community-id = { version = "0.2", optional = true }

zstd = { version = "0.13", default-features = false, features = ["wasm"], optional = true }

# Cryptography
aes = { version = "0.8", optional = true }
aes-siv = { version = "0.7.0", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
crypto_secretbox = { version = "0.1", features = ["salsa20"], optional = true }
ipcrypt-rs = { version = "0.9.4", optional = true, default-features = false }

# Cryptography - Block Modes
ctr = { version = "0.9", optional = true }
cbc = { version = "0.1", optional = true, features = ["alloc"] }
cfb-mode = { version = "0.8", optional = true }
ofb = { version = "0.6", optional = true }

# Protobuf support.
prost = { version = "0.13", default-features = false, optional = true, features = ["std"] }
prost-reflect = { version = "0.14", default-features = false, optional = true }
unicode-segmentation = "1.12.0"
lz4_flex = "0.11.5"
nom-language = { version = "0.1.0", default-features = false }

# Dependencies used for non-WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# HTTP support (optional, gated behind enable_network_functions).
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls-native-roots"], optional = true }
reqwest-middleware = { version = "0.4", default-features = false, optional = true }
reqwest-retry = { version = "0.8", default-features = false, optional = true }
dns-lookup = { version = "3", optional = true }
domain = { version = "0.11.0", optional = true, features = ["resolv-sync", "serde"] }
hostname = { version = "0.4", optional = true }
grok = { version = "2.4", optional = true }
onig = { version = "6", default-features = false, optional = true }
tokio = { version = "1.45", optional = true, features = ["io-util", "macros", "net", "time", "sync", "rt", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "v7"], optional = true }
jsonschema = { version = "0.38.1", default-features = false }

# Dependencies used for WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["v4", "v7", "js"], optional = true }

[dev-dependencies]
anyhow = "1"
criterion = "0.8"
chrono-tz = "0.10"
serde_json = "1"
indoc = "2"
tracing-test = { version = "0.2", default-features = false }
mlua = { version = "0.10", default-features = false, features = ["lua54", "send", "vendored"] }
quickcheck = { version = "1" }
regex = { version = "1", default-features = false, features = ["std", "perf", "unicode"] }
pastey = { version = "0.2", default-features = false }
proptest = { version = "1" }
proptest-derive = { version = "0.6" }

[build-dependencies]
lalrpop = { version = "0.22", default-features = false }
serde_yaml = "0.9.34"
ua-parser = { version = "0.2" }

[[bin]]
name = "vrl"
path = "src/main.rs"
required-features = ["cli", "stdlib"]

[[bench]]
name = "kind"
harness = false

[[bench]]
name = "keyvalue"
harness = false

[[bench]]
name = "stdlib"
harness = false
required-features = ["default", "test"]
