[package]
name = "release"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { workspace = true }
semver = "1"
toml_edit = "0.22"
ureq = { version = "3", features = ["json"] }
chrono = { version = "0.4", default-features = false, features = ["now"] }
serde = { version = "1", features = ["derive"] }
