[package]
name = "vrl-cli"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false
license = "MPL-2.0"

[[bin]]
name = "vrl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
vrl = { path = "../../", features = ["cli"] }
