[package]
name = "lookup"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false
license = "MPL-2.0"

[dependencies]
serde = { version = "1.0.152", default-features = false, features = ["derive", "alloc"] }
snafu = { version = "0.7", default-features = false }
regex = { version = "1.7.1", default-features = false, features = ["std", "perf"] }
once_cell = { version = "1.17" }
quickcheck = { version = "1.0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports", "async_tokio"] }
quickcheck = { version = "1.0.3" }

[features]
arbitrary = ["dep:quickcheck"]

[[bench]]
name = "lookup"
path = "benches/lookup.rs"
harness = false
test = false
required-features = []
