[package]
name = "vrl-tests"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
publish = false

[dependencies]
vrl = { path = "../../", features = ["test_framework"] }
chrono-tz = "0.10"
clap.workspace = true
glob = "0.3"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.1" }

[features]
default = []
vrl_mock = ["vrl/__mock_return_values_for_tests"]
